--- a/index.html
+++ b/index.html
@@ -42,8 +42,92 @@
        </div>
     </div>
     </header>
-    <main></main>
-    <footer></footer>
+    <main>
+      <div class="deco"></div>
+        <section class="aboutMe">
+            <div class="aboutMe_card">
+             <div class="aboutMe-title">
+                <h2>About Me</h2>
+                <p>X</p>
+             </div>   
+                <div class="aboutMe_content">
+                    <p>Je pense que tu l'auras deviné, je m'appelle Marina.<br>
+                        Je poursuis actuellement des études en tant qu'intégrateur web chez OpenClassrooms. ( Fév 2024 - Nov 2024 )
+                        Tu as la possibilité de jeter un coup d'œil à mes projets aboutis ou en train d'être élaborés.
+                        La page de bonus te permettra de consulter mes créations personnelles.
+                    </p>
+                    <p>Bisous</p>
+            </div>
+        </section>
+      <section class="cardImg">
+        <div class="cardImg_container">
+        <div class="cardImg_content img1">
+          <div class="cardImg_title">
+            <div class="cardImgDeco"></div>
+             <h3>Title1</h3>
+          </div>
+        </div>
+        <div class="cardImg_content img2">
+          <div class="cardImg_title">
+            <div class="cardImgDeco"></div>
+            <h3>Test</h3>
+          </div>
+        </div>
+
+        <div class="cardImg_content img3">
+          <div class="cardImg_title">
+            <div class="cardImgDeco"></div>
+            <h3>Test</h3>
+          </div>
+        </div>
+      </div>
+      </section>
+
+      <div class="cardText">
+        <div class="cardText_content">
+          <h2>Lorem ipsum.</h2>
+          <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Impedit ut,
+            voluptates aspernatur, amet earum voluptas doloribus iste quia voluptate quasi,
+            expedita animi adipisci ab suscipit magni. Repudiandae quae magnam quasi.
+          </p>
+        </div>
+      </div>
+      <div class="cardLink">
+        <a href="#" class="cardLink_container">
+          <div class="cardLink_content">
+            <img src="/img/flowers.png" alt="image">
+            <div class="cardLink_title">
+            <h2>Lorem ipsum dolor</h2>
+            <p>Love</p>
+            </div>
+          </div>
+        </a>
+      </div>
+
+      <div class="langage_tag">
+        <H2>J'apprends.</H2>
+        <div class="langage_tag_container">
+
+            <div class="tag">Html</div>
+            <div class="tag">CSS</div>
+            <div class="tag">SASS</div>
+            <div class="tag">JavaScript</div>
+            <div class="tag">React</div>
+
+        </div>
+      
+      </div>
+
+    </main>
+    <footer class="footer">
+      <div class="footer_container">
+        <h3>Merci.</h3>
+        <a href="#">        
+          <img src="/img/arrow.png" alt="arrow">
+        </a>
+      </div>
+      
+    </footer>
   </body>
   <script src="index.js"></script>
 </html>
